--- a/index.html
+++ b/index.html
@@ -3,98 +3,117 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trang chủ đẹp</title>
+  <title>Vũ trụ & Đồng hồ</title>
   <style>
-    * {
+    html, body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      height: 100vh;
-      background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
-      display: flex;
-      justify-content: center;
-      align-items: center;
       overflow: hidden;
-      font-family: sans-serif;
+      height: 100%;
+      background: black;
+      font-family: 'Segoe UI', sans-serif;
       color: white;
     }
 
-    .hero {
-      position: relative;
+    canvas {
+      position: absolute;
       width: 100%;
       height: 100%;
-      overflow: hidden;
-    }
-
-    .hero img {
-      position: absolute;
-      width: 120%;
-      height: auto;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(1);
-      animation: zoomIn 20s ease-in-out infinite alternate;
-      opacity: 0.4;
-      pointer-events: none;
-    }
-
-    @keyframes zoomIn {
-      from {
-        transform: translate(-50%, -50%) scale(1);
-      }
-      to {
-        transform: translate(-50%, -50%) scale(1.2);
-      }
-    }
-
-    .content {
-      position: relative;
-      z-index: 2;
-      text-align: center;
-      animation: fadeIn 2s ease-out;
-    }
-
-    .content h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    .content p {
-      font-size: 1.2rem;
-      color: #ddd;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      display: block;
     }
 
     .overlay {
       position: absolute;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(180deg, rgba(0,0,0,0.6) 20%, transparent 100%);
-      z-index: 1;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 10;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.4);
+      padding: 2rem;
+      border-radius: 12px;
+      backdrop-filter: blur(4px);
+    }
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+
+    #clock {
+      font-size: 2.5rem;
+      font-weight: bold;
+      letter-spacing: 3px;
     }
   </style>
 </head>
 <body>
-  <div class="hero">
-    <img src="https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1600&q=80" alt="Background" />
-    <div class="overlay"></div>
-    <div class="content">
-      <h1>Chào mừng đến với Game</h1>
-      <p>Trải nghiệm hành trình hấp dẫn, sống động và không giới hạn.</p>
-    </div>
+  <canvas id="stars"></canvas>
+
+  <div class="overlay">
+    <h1>🌌 Vũ trụ chuyển động</h1>
+    <div id="clock">00:00:00</div>
   </div>
+
+  <script>
+    // ⭐️ Star animation (simple starfield)
+    const canvas = document.getElementById("stars");
+    const ctx = canvas.getContext("2d");
+
+    let stars = [];
+    let w, h;
+
+    function initStars() {
+      w = canvas.width = window.innerWidth;
+      h = canvas.height = window.innerHeight;
+      stars = [];
+
+      for (let i = 0; i < 300; i++) {
+        stars.push({
+          x: Math.random() * w,
+          y: Math.random() * h,
+          r: Math.random() * 1.5 + 0.5,
+          dx: (Math.random() - 0.5) * 0.5,
+          dy: (Math.random() - 0.5) * 0.5
+        });
+      }
+    }
+
+    function drawStars() {
+      ctx.clearRect(0, 0, w, h);
+      ctx.fillStyle = "white";
+      for (let star of stars) {
+        ctx.beginPath();
+        ctx.arc(star.x, star.y, star.r, 0, Math.PI * 2);
+        ctx.fill();
+
+        star.x += star.dx;
+        star.y += star.dy;
+
+        if (star.x < 0 || star.x > w) star.dx *= -1;
+        if (star.y < 0 || star.y > h) star.dy *= -1;
+      }
+      requestAnimationFrame(drawStars);
+    }
+
+    window.addEventListener("resize", initStars);
+
+    initStars();
+    drawStars();
+
+    // 🕒 Clock (real-time)
+    const clock = document.getElementById("clock");
+
+    function updateClock() {
+      const now = new Date();
+      const h = String(now.getHours()).padStart(2, "0");
+      const m = String(now.getMinutes()).padStart(2, "0");
+      const s = String(now.getSeconds()).padStart(2, "0");
+      clock.textContent = `${h}:${m}:${s}`;
+    }
+
+    setInterval(updateClock, 1000);
+    updateClock();
+  </script>
 </body>
 </html>
