--- a/index.html
+++ b/index.html
@@ -3,53 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hệ Ngân Hà chuyển động</title>
+  <title>Welcome</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
       overflow: hidden;
+      height: 100%;
       background: black;
       font-family: 'Segoe UI', sans-serif;
       color: white;
     }
 
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background: url('https://images.unsplash.com/photo-1477201379323-186ec5a4e4e2?ixlib=rb-4.0.3&auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
-      z-index: -2;
-      filter: brightness(0.3) blur(2px);
-    }
-
     canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1;
+      position: absolute;
       width: 100%;
       height: 100%;
+      display: block;
     }
 
     .overlay {
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%) rotate(0deg);
-      animation: spin 100s linear infinite;
+      transform: translate(-50%, -50%);
+      z-index: 10;
       text-align: center;
-      z-index: 1;
       background: rgba(0, 0, 0, 0.4);
       padding: 2rem;
       border-radius: 12px;
       backdrop-filter: blur(4px);
-    }
-
-    @keyframes spin {
-      0% { transform: translate(-50%, -50%) rotate(0deg); }
-      100% { transform: translate(-50%, -50%) rotate(360deg); }
     }
 
     .title {
@@ -69,51 +52,37 @@
   <canvas id="stars"></canvas>
 
   <div class="overlay">
-    <div class="title">🌌 Hệ Ngân Hà chuyển động</div>
+    <div class="title">Welcome to the galaxy</div>
     <div id="clock">00:00:00</div>
   </div>
 
   <script>
+    // ⭐️ Star animation (simple starfield)
     const canvas = document.getElementById("stars");
     const ctx = canvas.getContext("2d");
+
     let stars = [];
-    let shootingStars = [];
     let w, h;
 
-    function init() {
+    function initStars() {
       w = canvas.width = window.innerWidth;
       h = canvas.height = window.innerHeight;
       stars = [];
 
-      for (let i = 0; i < 250; i++) {
+      for (let i = 0; i < 300; i++) {
         stars.push({
           x: Math.random() * w,
           y: Math.random() * h,
           r: Math.random() * 1.5 + 0.5,
-          dx: (Math.random() - 0.5) * 0.2,
-          dy: (Math.random() - 0.5) * 0.2
+          dx: (Math.random() - 0.5) * 0.5,
+          dy: (Math.random() - 0.5) * 0.5
         });
       }
     }
 
-    function createShootingStar() {
-      if (Math.random() < 0.03) {
-        shootingStars.push({
-          x: Math.random() * w,
-          y: Math.random() * h * 0.5,
-          dx: -6 - Math.random() * 4,
-          dy: 3 + Math.random() * 2,
-          length: 200,
-          opacity: 1
-        });
-      }
-    }
-
-    function draw() {
+    function drawStars() {
       ctx.clearRect(0, 0, w, h);
       ctx.fillStyle = "white";
-
-      // stars
       for (let star of stars) {
         ctx.beginPath();
         ctx.arc(star.x, star.y, star.r, 0, Math.PI * 2);
@@ -125,35 +94,15 @@
         if (star.x < 0 || star.x > w) star.dx *= -1;
         if (star.y < 0 || star.y > h) star.dy *= -1;
       }
-
-      // shooting stars
-      for (let i = shootingStars.length - 1; i >= 0; i--) {
-        let s = shootingStars[i];
-        ctx.beginPath();
-        ctx.moveTo(s.x, s.y);
-        ctx.lineTo(s.x + s.length, s.y - s.length * 0.5);
-        ctx.strokeStyle = `rgba(255,255,255,${s.opacity})`;
-        ctx.lineWidth = 2;
-        ctx.stroke();
-
-        s.x += s.dx;
-        s.y += s.dy;
-        s.opacity -= 0.02;
-
-        if (s.opacity <= 0) {
-          shootingStars.splice(i, 1);
-        }
-      }
-
-      createShootingStar();
-      requestAnimationFrame(draw);
+      requestAnimationFrame(drawStars);
     }
 
-    window.addEventListener("resize", init);
-    init();
-    draw();
+    window.addEventListener("resize", initStars);
 
-    // Đồng hồ thời gian thực
+    initStars();
+    drawStars();
+
+    // 🕒 Clock (real-time)
     const clock = document.getElementById("clock");
 
     function updateClock() {
