--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <canvas id="stars"></canvas>
 
   <div class="overlay">
-    <div class="title">Hệ mặt trời chuyển động</div>
+    <div class="title">Welcome to the galaxy</div>
     <div id="clock">00:00:00</div>
   </div>
 
