--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <canvas id="stars"></canvas>
 
   <div class="overlay">
+    <a href="./pk_multiplayer_game/index.html" target="_blank" style="display:d-none;">Visit my GitHub</a>
     <div class="title">Welcome to the galaxy</div>
     <div id="clock">00:00:00</div>
   </div>
