--- a/pk_multiplayer_game/index.html
+++ b/pk_multiplayer_game/index.html
@@ -21,6 +21,10 @@
     <div id="room-list"></div>
   </div>
   <div id="game-ui" style="display:none">
+    <div id="room-info" style="margin-bottom: 10px;">
+      <span>Phòng: <span id="room-id"></span></span>
+      <button id="leave-room-btn" style="margin-left: 10px;">Thoát phòng</button>
+    </div>
     <div id="game-container"></div>
     <div id="info-panel">
       <div id="stats"></div>
