Add game guide to UI; provide instructions for movement, shooting, and shield mechanics

--- a/pk_multiplayer_game/index.html
+++ b/pk_multiplayer_game/index.html
@@ -29,6 +29,16 @@
     <div id="info-panel">
       <div id="stats"></div>
     </div>
+    <div id="game-guide" style="margin-top:18px;font-size:15px;color:#0ff;text-align:center;line-height:1.6;">
+      <b>Hướng dẫn chơi:</b><br>
+      Di chuyển: <b>W-A-S-D</b> hoặc <b>Phím mũi tên</b><br>
+      Bắn thường: <b>J</b> hoặc <b>0</b> &nbsp;|&nbsp; Kỹ năng: <b>K</b> hoặc <b>1</b><br>
+      Tạo giáp: <b>L</b> hoặc <b>2</b> (mỗi lớp giáp tốn 2 năng lượng, tối đa 5 lớp)<br>
+      Đòn cận chiến: bắn sát đối thủ<br>
+      Đạn thường gây 5 sát thương, kỹ năng gây 10 sát thương, cận chiến gây 5 sát thương<br>
+      Mỗi lớp giáp chặn được 10 sát thương rồi biến mất<br>
+      Thoát phòng: <b>Thoát phòng</b> hoặc đóng tab<br>
+    </div>
   </div>
   <script src="firebase-config.js"></script>
   <script src="game.js"></script>
