Update file paths in .gitignore and README; add firebase-config.js for Firebase integration

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </style>
 </head>
 <body>
-  <a href="./pk_multiplayer_game/index.html" target="_blank"  class="game-link">PK_MULTIPLAYER_GAME</a>
+  <a href="./coddingPK/index.html" target="_blank"  class="game-link">coddingPK</a>
   <canvas id="stars"></canvas>
   <!-- 2.6 -->
   <div class="overlay">
