Update title and enhance font styles for overlay elements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Welcome</title>
+  <!-- <link rel="icon" href="favicon.png" type="image/png"> -->
+  <title>TMC</title>
   <style>
     html, body {
       margin: 0;
@@ -39,12 +40,16 @@
       font-size: 2.5rem;
       font-weight: bold;
       margin-bottom: 1rem;
+      font-family: cursive;
+      white-space: nowrap;
     }
 
     #clock {
       font-size: 2.2rem;
       font-weight: bold;
       letter-spacing: 3px;
+      font-family: emoji;
+      white-space: nowrap;
     }
 
     .game-link {
