--- a/coddingPK/index.html
+++ b/coddingPK/index.html
@@ -13,6 +13,17 @@
   <div id="login-panel">
     <h2>Đăng nhập</h2>
     <input id="username-input" placeholder="Nhập tên của bạn" maxlength="16" />
+    <div class="login-buttons">
+      <button id="login-btn">Đăng nhập</button>
+      <button id="google-login-btn" class="google-btn">
+        <span class="google-icon">🌐</span>
+        Đăng nhập với Google
+      </button>
+    </div>
+  </div>
+  
+  <div id="character-selection-panel" style="display:none">
+    <h2>Chọn nhân vật và vũ khí</h2>
     
     <div class="character-select">
       <h3>Chọn nhân vật</h3>
@@ -56,7 +67,7 @@
       </div>
     </div>
 
-    <button id="login-btn">Vào game</button>
+    <button id="continue-btn">Tiếp tục</button>
   </div>
   <div id="room-panel" style="display:none">
     <!-- Current selection display -->
